--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-07 03:03 -->
+<!-- 2022-10-08 02:59 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -36,19 +36,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org06b2faa">1. 暑假</a>
+<li><a href="#orgadf91e7">1. 暑假</a>
 <ul>
-<li><a href="#orgf72d829">1.1. 夏令营</a></li>
+<li><a href="#org40ce0cd">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgbd71720">2. 打工</a></li>
-<li><a href="#org0cce7c1">3. 我的928</a>
+<li><a href="#org3264695">2. 打工</a></li>
+<li><a href="#orgb82906e">3. 我的928</a>
 <ul>
-<li><a href="#org5039b49">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org1bf1951">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org091b745">4. 他们的928</a></li>
-<li><a href="#orgbf0a7ce">5. 总结</a></li>
+<li><a href="#orgaa1837b">4. 他们的928</a></li>
+<li><a href="#org5ebfa21">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -58,7 +58,7 @@
 </p>
 
 
-<figure id="org76e69ee">
+<figure id="org4916c7b">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -81,8 +81,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org06b2faa" class="outline-2">
-<h2 id="org06b2faa"><span class="section-number-2">1.</span> <a href="#org06b2faa">暑假</a></h2>
+<div id="outline-container-orgadf91e7" class="outline-2">
+<h2 id="orgadf91e7"><span class="section-number-2">1.</span> <a href="#orgadf91e7">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -106,8 +106,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgf72d829" class="outline-3">
-<h3 id="orgf72d829"><span class="section-number-3">1.1.</span> <a href="#orgf72d829">夏令营</a></h3>
+<div id="outline-container-org40ce0cd" class="outline-3">
+<h3 id="org40ce0cd"><span class="section-number-3">1.1.</span> <a href="#org40ce0cd">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -149,8 +149,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgbd71720" class="outline-2">
-<h2 id="orgbd71720"><span class="section-number-2">2.</span> <a href="#orgbd71720">打工</a></h2>
+<div id="outline-container-org3264695" class="outline-2">
+<h2 id="org3264695"><span class="section-number-2">2.</span> <a href="#org3264695">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -164,8 +164,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org0cce7c1" class="outline-2">
-<h2 id="org0cce7c1"><span class="section-number-2">3.</span> <a href="#org0cce7c1">我的928</a></h2>
+<div id="outline-container-orgb82906e" class="outline-2">
+<h2 id="orgb82906e"><span class="section-number-2">3.</span> <a href="#orgb82906e">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -181,8 +181,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org5039b49" class="outline-3">
-<h3 id="org5039b49"><span class="section-number-3">3.1.</span> <a href="#org5039b49">928演唱会(bushi</a></h3>
+<div id="outline-container-org1bf1951" class="outline-3">
+<h3 id="org1bf1951"><span class="section-number-3">3.1.</span> <a href="#org1bf1951">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -190,7 +190,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org379b026">
+<figure id="org95c97dd">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -202,7 +202,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org1a08642">
+<figure id="org33848ed">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -215,8 +215,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org091b745" class="outline-2">
-<h2 id="org091b745"><span class="section-number-2">4.</span> <a href="#org091b745">他们的928</a></h2>
+<div id="outline-container-orgaa1837b" class="outline-2">
+<h2 id="orgaa1837b"><span class="section-number-2">4.</span> <a href="#orgaa1837b">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -236,8 +236,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgbf0a7ce" class="outline-2">
-<h2 id="orgbf0a7ce"><span class="section-number-2">5.</span> <a href="#orgbf0a7ce">总结</a></h2>
+<div id="outline-container-org5ebfa21" class="outline-2">
+<h2 id="org5ebfa21"><span class="section-number-2">5.</span> <a href="#org5ebfa21">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -252,7 +252,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-07 03:03</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-08 02:59</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
