--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-08 02:59 -->
+<!-- 2022-10-08 09:19 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,46 +36,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgbeb4ca3">1. 妙妙文章</a>
+<li><a href="#orgaaaa7a4">1. 妙妙文章</a>
 <ul>
-<li><a href="#orgd8eab67">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orgea4df06">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgb26e9a3">1.3. 关于编辑器</a></li>
-<li><a href="#org86dc29e">1.4. 关于代码</a></li>
-<li><a href="#org172201c">1.5. 关于CPU</a>
+<li><a href="#org3456e29">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org2e0dffb">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org4044623">1.3. 关于编辑器</a></li>
+<li><a href="#orgf06a8d2">1.4. 关于代码</a></li>
+<li><a href="#org9f17275">1.5. 关于CPU</a>
 <ul>
-<li><a href="#org7b92135">1.5.1. Lisp</a></li>
+<li><a href="#orgf221f5e">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgf458ee1">1.6. 关于算法</a>
+<li><a href="#org54d1a8a">1.6. 关于算法</a>
 <ul>
-<li><a href="#orgb9b15ce">1.6.1. 关于随机</a></li>
+<li><a href="#org1e4bb2c">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org776144b">1.7. 关于AI</a></li>
-<li><a href="#orgc61c4d9">1.8. 关于软件</a>
+<li><a href="#org0535a1c">1.7. 关于AI</a></li>
+<li><a href="#org5bdc76c">1.8. 关于软件</a>
 <ul>
-<li><a href="#org8a659a0">1.8.1. SQLite</a></li>
+<li><a href="#orgc254992">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org0a14f5c">1.9. 关于workflow</a></li>
+<li><a href="#orga15a4f4">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orge7b8888">2. 棒棒视频</a>
+<li><a href="#org3bf1c22">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgd8749e4">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org7cde98f">2.2. 各种剧</a></li>
-<li><a href="#org309c217">2.3. 电影</a></li>
+<li><a href="#org0f57032">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org2d4d81a">2.2. 各种剧</a></li>
+<li><a href="#org242a20a">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org3b0ec02">3. 快乐游戏</a></li>
-<li><a href="#orgfe81d71">4. 宝藏博主</a></li>
-<li><a href="#org77e5eb9">5. 有意思的</a>
+<li><a href="#org8906179">3. 快乐游戏</a></li>
+<li><a href="#orgd7a782b">4. 宝藏博主</a></li>
+<li><a href="#orgae59277">5. 有意思的</a>
 <ul>
-<li><a href="#org5036223">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org8ba61d5">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org6fe163d">6. 我想玩的</a></li>
+<li><a href="#orga4cfb37">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -84,8 +84,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgbeb4ca3" class="outline-2">
-<h2 id="orgbeb4ca3"><span class="section-number-2">1.</span> <a href="#orgbeb4ca3">妙妙文章</a></h2>
+<div id="outline-container-orgaaaa7a4" class="outline-2">
+<h2 id="orgaaaa7a4"><span class="section-number-2">1.</span> <a href="#orgaaaa7a4">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -443,7 +443,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orgca18feb">
+<figure id="org163e37f">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -506,8 +506,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-orgd8eab67" class="outline-3">
-<h3 id="orgd8eab67"><span class="section-number-3">1.1.</span> <a href="#orgd8eab67">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org3456e29" class="outline-3">
+<h3 id="org3456e29"><span class="section-number-3">1.1.</span> <a href="#org3456e29">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orgea4df06" class="outline-3">
-<h3 id="orgea4df06"><span class="section-number-3">1.2.</span> <a href="#orgea4df06">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org2e0dffb" class="outline-3">
+<h3 id="org2e0dffb"><span class="section-number-3">1.2.</span> <a href="#org2e0dffb">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -572,8 +572,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgb26e9a3" class="outline-3">
-<h3 id="orgb26e9a3"><span class="section-number-3">1.3.</span> <a href="#orgb26e9a3">关于编辑器</a></h3>
+<div id="outline-container-org4044623" class="outline-3">
+<h3 id="org4044623"><span class="section-number-3">1.3.</span> <a href="#org4044623">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -589,8 +589,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org86dc29e" class="outline-3">
-<h3 id="org86dc29e"><span class="section-number-3">1.4.</span> <a href="#org86dc29e">关于代码</a></h3>
+<div id="outline-container-orgf06a8d2" class="outline-3">
+<h3 id="orgf06a8d2"><span class="section-number-3">1.4.</span> <a href="#orgf06a8d2">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -616,8 +616,8 @@ future.</li>
 </div>
 </div>
 
-<div id="outline-container-org172201c" class="outline-3">
-<h3 id="org172201c"><span class="section-number-3">1.5.</span> <a href="#org172201c">关于CPU</a></h3>
+<div id="outline-container-org9f17275" class="outline-3">
+<h3 id="org9f17275"><span class="section-number-3">1.5.</span> <a href="#org9f17275">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -631,8 +631,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </ul>
 </div>
 
-<div id="outline-container-org7b92135" class="outline-4">
-<h4 id="org7b92135"><span class="section-number-4">1.5.1.</span> <a href="#org7b92135">Lisp</a></h4>
+<div id="outline-container-orgf221f5e" class="outline-4">
+<h4 id="orgf221f5e"><span class="section-number-4">1.5.1.</span> <a href="#orgf221f5e">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -655,8 +655,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgf458ee1" class="outline-3">
-<h3 id="orgf458ee1"><span class="section-number-3">1.6.</span> <a href="#orgf458ee1">关于算法</a></h3>
+<div id="outline-container-org54d1a8a" class="outline-3">
+<h3 id="org54d1a8a"><span class="section-number-3">1.6.</span> <a href="#org54d1a8a">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -675,8 +675,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgb9b15ce" class="outline-4">
-<h4 id="orgb9b15ce"><span class="section-number-4">1.6.1.</span> <a href="#orgb9b15ce">关于随机</a></h4>
+<div id="outline-container-org1e4bb2c" class="outline-4">
+<h4 id="org1e4bb2c"><span class="section-number-4">1.6.1.</span> <a href="#org1e4bb2c">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -690,8 +690,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org776144b" class="outline-3">
-<h3 id="org776144b"><span class="section-number-3">1.7.</span> <a href="#org776144b">关于AI</a></h3>
+<div id="outline-container-org0535a1c" class="outline-3">
+<h3 id="org0535a1c"><span class="section-number-3">1.7.</span> <a href="#org0535a1c">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -701,8 +701,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgc61c4d9" class="outline-3">
-<h3 id="orgc61c4d9"><span class="section-number-3">1.8.</span> <a href="#orgc61c4d9">关于软件</a></h3>
+<div id="outline-container-org5bdc76c" class="outline-3">
+<h3 id="org5bdc76c"><span class="section-number-3">1.8.</span> <a href="#org5bdc76c">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -713,8 +713,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org8a659a0" class="outline-4">
-<h4 id="org8a659a0"><span class="section-number-4">1.8.1.</span> <a href="#org8a659a0">SQLite</a></h4>
+<div id="outline-container-orgc254992" class="outline-4">
+<h4 id="orgc254992"><span class="section-number-4">1.8.1.</span> <a href="#orgc254992">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -728,8 +728,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org0a14f5c" class="outline-3">
-<h3 id="org0a14f5c"><span class="section-number-3">1.9.</span> <a href="#org0a14f5c">关于workflow</a></h3>
+<div id="outline-container-orga15a4f4" class="outline-3">
+<h3 id="orga15a4f4"><span class="section-number-3">1.9.</span> <a href="#orga15a4f4">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -739,8 +739,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orge7b8888" class="outline-2">
-<h2 id="orge7b8888"><span class="section-number-2">2.</span> <a href="#orge7b8888">棒棒视频</a></h2>
+<div id="outline-container-org3bf1c22" class="outline-2">
+<h2 id="org3bf1c22"><span class="section-number-2">2.</span> <a href="#org3bf1c22">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -785,33 +785,16 @@ Practical, but also works on the human level in this case.
 </blockquote></li>
 <li><a href="https://space.bilibili.com/480229228/channel/collectiondetail?sid=682536">Bilibili 胶囊计划 第一届</a>
 <ul class="org-ul">
-<li><p>
-<a href="https://www.bilibili.com/video/BV1S24y1Z7aA">《终极体验》：你有欲望与自我拉扯撕裂的体验吗？</a>
-</p>
-
-<p>
-感官分享有点像大刘的《带上她的眼睛》
-</p></li>
-<li><p>
-<a href="https://www.bilibili.com/video/BV1ht4y1j7HN">《癔症》：童年噩梦</a>
-</p>
-
-<p>
-结尾看到&ldquo;声音片段取材自真实录音&rdquo;惊了
-</p></li>
-<li><p>
-<a href="https://www.bilibili.com/video/BV1ae4y187wg">《界》：一界之隔，人神皆非！</a>
-</p>
-
-<p>
-好看, 就是字闪得太快了, 看不清&#x2026;
-</p></li>
+<li><a href="https://www.bilibili.com/video/BV1S24y1Z7aA">《终极体验》：你有欲望与自我拉扯撕裂的体验吗？</a> 感官分享有点像大刘的《带上她的眼睛》</li>
+<li><a href="https://www.bilibili.com/video/BV1ht4y1j7HN">《癔症》：童年噩梦</a> 结尾看到&ldquo;声音片段取材自真实录音&rdquo;惊了</li>
+<li><a href="https://www.bilibili.com/video/BV1ae4y187wg">《界》：一界之隔，人神皆非！</a> 好看, 就是字闪得太快了, 看不清&#x2026;</li>
+<li><a href="https://b23.tv/etM5HXb">《齐日迈》：迈一步，即深渊？</a> 战胜自己</li>
 </ul></li>
 </ul>
 </div>
 
-<div id="outline-container-orgd8749e4" class="outline-3">
-<h3 id="orgd8749e4"><span class="section-number-3">2.1.</span> <a href="#orgd8749e4">Veritasium 真理元素</a></h3>
+<div id="outline-container-org0f57032" class="outline-3">
+<h3 id="org0f57032"><span class="section-number-3">2.1.</span> <a href="#org0f57032">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -836,8 +819,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org7cde98f" class="outline-3">
-<h3 id="org7cde98f"><span class="section-number-3">2.2.</span> <a href="#org7cde98f">各种剧</a></h3>
+<div id="outline-container-org2d4d81a" class="outline-3">
+<h3 id="org2d4d81a"><span class="section-number-3">2.2.</span> <a href="#org2d4d81a">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -860,8 +843,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org309c217" class="outline-3">
-<h3 id="org309c217"><span class="section-number-3">2.3.</span> <a href="#org309c217">电影</a></h3>
+<div id="outline-container-org242a20a" class="outline-3">
+<h3 id="org242a20a"><span class="section-number-3">2.3.</span> <a href="#org242a20a">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -886,8 +869,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org3b0ec02" class="outline-2">
-<h2 id="org3b0ec02"><span class="section-number-2">3.</span> <a href="#org3b0ec02">快乐游戏</a></h2>
+<div id="outline-container-org8906179" class="outline-2">
+<h2 id="org8906179"><span class="section-number-2">3.</span> <a href="#org8906179">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -916,8 +899,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgfe81d71" class="outline-2">
-<h2 id="orgfe81d71"><span class="section-number-2">4.</span> <a href="#orgfe81d71">宝藏博主</a></h2>
+<div id="outline-container-orgd7a782b" class="outline-2">
+<h2 id="orgd7a782b"><span class="section-number-2">4.</span> <a href="#orgd7a782b">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -928,7 +911,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org41b1dbb">
+<figure id="org7ba3cb5">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -936,8 +919,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org77e5eb9" class="outline-2">
-<h2 id="org77e5eb9"><span class="section-number-2">5.</span> <a href="#org77e5eb9">有意思的</a></h2>
+<div id="outline-container-orgae59277" class="outline-2">
+<h2 id="orgae59277"><span class="section-number-2">5.</span> <a href="#orgae59277">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -961,8 +944,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org5036223" class="outline-3">
-<h3 id="org5036223"><span class="section-number-3">5.1.</span> <a href="#org5036223">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org8ba61d5" class="outline-3">
+<h3 id="org8ba61d5"><span class="section-number-3">5.1.</span> <a href="#org8ba61d5">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -974,8 +957,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org6fe163d" class="outline-2">
-<h2 id="org6fe163d"><span class="section-number-2">6.</span> <a href="#org6fe163d">我想玩的</a></h2>
+<div id="outline-container-orga4cfb37" class="outline-2">
+<h2 id="orga4cfb37"><span class="section-number-2">6.</span> <a href="#orga4cfb37">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -997,8 +980,8 @@ Always check your friendship before terminating it.  hhhh</li>
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-04 20:45</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-08 02:59</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-08 09:18</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-08 09:19</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
